feat: met-239-tx-chart-widget base logic